--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Intelligent Medical Diagnosis Assistant (Imeda)
 
 # Your name to show in the footer
-author: Some Person
+author: Mahsa Dehghanm
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -52,15 +52,10 @@ round-avatar: true
 social-network-links:
   email: "someone@example.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
-#  medium: yourname
-#  reddit: yourname
-#  linkedin: daattali
+  github: MahsaDehghan
+  # twitter: daattali
+  whatsapp: +98-9198338910
+  linkedin: Mahsa Dehghan Manshadi
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -93,14 +88,14 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
+  whatsapp: true
   linkedin: true
+  github: true
   vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
@@ -126,7 +121,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+#keywords: "CAD, Colon, Colonoscopy, Gastrointestinal disorders, polyp, colon, colorectal cancer, AI, deep learning, computer-aided diagnosis, intelligent diagnosis systems, cancer, virtual cancer diagnosis assistant"
 
 ######################################
 # --- Colours / background image --- #
